Enunciado de 2018/1/MAT1203/10

--- a/2018/1/MAT1203/10/enunciado.tex
+++ b/2018/1/MAT1203/10/enunciado.tex
@@ -113,5 +113,25 @@
 \end{center}
 
 \begin{preguntas}
+\item Sean $B_1 = \{1+x,1-x,1+x^2\}$ y $B_2$ bases de $P_2(\R)$ tales que para todo $p \in P_2(\R)$
+	$$ \begin{bmatrix}
+	1 & 0 & -1\\
+	1 & 1 & 0 \\
+	0 & 1 & 2
+	\end{bmatrix} [p]_{B_1} = [p]_{B_2}$$
+	Determine los polinomios que forman la base $B_2$.
+\item Sean $B$ y $C$ bases de un espacio vectorial $V$ y $P = \begin{bmatrix}4 &-1 \\ 6 & -1\end{bmatrix}$ la matriz de cambio de coordenadas tal que $[v]_C = P[v]_B\ \forall v \in V$
+\begin{enumerate}[a)]
+\item Demuestre que el conjunto $W = \{v \in V: [v]_C = 2[v]_B\}$ es un subespacio de $V$.
+\item Si $B=\{v_1,v_2\}$ determine una base para $W$ en términos de la base de $B$.
+\end{enumerate}
+\item Calcular los valores y vectores propios de
+	$$ A = \begin{bmatrix} 1 & 2 & -1\\ 1 & 0 & 1\\ 4 & -4 & 5\end{bmatrix}$$
+\item Determine si las siguientes afirmaciones son Verdaderas o Falsas.
+\begin{enumerate}[a)]
+\item El espacio fila de $AB$ es subespacio del espacio fila de $B$.
+\item Dada una base en un espacio vectorial $V$, el vector coordenado de un vector de $V$ con respecto a esa base, es único.
+\item Si $A$ y $B$ son similares y $\lambda$ es valor propio de $A$ entonces $\lambda$ es también valor propio de $B$.
+\end{enumerate}
 \end{preguntas}
 \end{document}
