--- a/2018/1/MAT220E/1/solucion.tex
+++ b/2018/1/MAT220E/1/solucion.tex
@@ -113,5 +113,95 @@
 \end{center}
 
 \begin{preguntas}
+\item Determine si las siguientes sucesiones convergen y en caso de hacerlo, calcular su límite.
+\begin{tasks}(2)
+\task $\left\{1, -\dfrac{2}{3}, \dfrac{4}{9}, -\dfrac{8}{27}, \dots \right\}$
+\task $\left\{\sqrt[]{2}, \sqrt[]{2\ \sqrt[]{2}}, \sqrt[]{2\ \sqrt[]{2\ \sqrt[]{2}}}, \dots \right\}$
+\end{tasks}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item $\left\{1, -\dfrac{2}{3}, \dfrac{4}{9}, -\dfrac{8}{27}, \dots \right\}$\\
+			\\
+			Observando la sucesión, resulta evidente que el numerador es $2^n$ y el\\ denominador $3^n$. Además, vemos que es alternante, por lo que el término general será
+			$$a_n = (-1)^n \dfrac{2^{n}}{3^{n}}$$
+			Luego, el límite de la sucesión es igual al límite del termino general, que sería
+			$$\lim\limits_{n\ra \infty} a_n = \lim\limits_{n\ra \infty} (-1)^n \dfrac{2^{n}}{3^{n}} = 
+			\lim\limits_{n\ra \infty} (-1)^n \left(\dfrac{2}{3}\right)^n = 0$$
+\item $\left\{\sqrt[]{2}, \sqrt[]{2\ \sqrt[]{2}}, \sqrt[]{2\ \sqrt[]{2\ \sqrt[]{2}}}, \dots \right\}$
+\end{enumerate}
+\end{solucion}
+\item Calcule el límite de las siguientes sucesiónes
+\begin{tasks}(2)
+\task $a_n = \dfrac{3^n+7}{5^n-3}$
+\task $a_n = \dfrac{n^3-n}{7n^3+6}$
+\end{tasks}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item $a_n = \dfrac{3^n+7}{5^n-3}$\\
+			\\
+			Como antes, vemos el límite del término general
+			$$\lim\limits_{n\ra \infty} a_n = \lim\limits_{n\ra \infty} \dfrac{3^n+7}{5^n-3} \stackrel{L'H}{=} \lim\limits_{n\ra \infty} \dfrac{ln(3)3^n}{ln(5)5^n} = \lim\limits_{n\ra \infty} \dfrac{ln(3)}{ln(5)} \left(\dfrac{3}{5}\right)^n = 0$$
+\item $a_n = \dfrac{n^3-n}{7n^3+6}$\\
+			\\
+			$$\lim\limits_{n\ra \infty} a_n = \lim\limits_{n\ra \infty} \dfrac{n^3-n}{7n^3+6} \stackrel{L'H}{=} \lim\limits_{n\ra \infty} \dfrac{3n^2-1}{21n^2}
+			\stackrel{L'H}{=} \lim\limits_{n\ra \infty} \dfrac{6n}{42n} = \dfrac{1}{7}$$
+\end{enumerate}
+\end{solucion}
+\item Calcule la siguiente integral, usando la definición de esta
+	$$\int_2^5(4-2x)dx$$
+\begin{solucion}
+Usando la integral por definición, podemos escribir la integral como
+		$$\int_2^5(4-2x)dx = \lim\limits_{n\ra \infty} \dfrac{5-2}{n} \sum\limits_{i=1}^n f \left(2+\dfrac{(5-2)i}{n}\right) $$
+		$$\int_2^5(4-2x)dx = \lim\limits_{n\ra \infty} \dfrac{5-2}{n} \sum\limits_{i=1}^n \left[4-2 \left(2+\dfrac{(5-2)i}{n}\right)\right]$$
+		Luego, procedemos a resolver el límite
+		$$= \lim\limits_{n\ra \infty} \dfrac{3}{n} \sum\limits_{i=1}^n \left[4-2 \left(2+\dfrac{3i}{n}\right)\right]$$
+		$$= \lim\limits_{n\ra \infty} \dfrac{3}{n} \sum\limits_{i=1}^n \left[4-4-\dfrac{6i}{n}\right]$$
+		$$= \lim\limits_{n\ra \infty} \dfrac{3}{n} \sum\limits_{i=1}^n \left[-\dfrac{6i}{n}\right]$$
+		$$= -18\lim\limits_{n\ra \infty} \dfrac{1}{n^2} \sum\limits_{i=1}^n i$$
+		$$= -18\lim\limits_{n\ra \infty} \dfrac{1}{n^2} \dfrac{n(n+1)}{2}$$
+		$$= -9\lim\limits_{n\ra \infty} \dfrac{n+1}{n}$$
+		$$= -9$$
+\end{solucion}
+\item Exprese el siguiente límite como una integral
+	$$\lim\limits_{n\ra \infty} \sum\limits_{k=0}^n \dfrac{1}{n+3k}$$
+\begin{solucion}
+Para lograr esto, debemos acomodar el límite para que tenga la estructura de una Suma de Riemann, es decir,
+		$$\lim\limits_{n \ra \infty} \dfrac{b-a}{n}\sum\limits_{k=0} f\left(a+\dfrac{(b-a)k}{n}\right)$$
+		Reorganizando el límite pedido,
+		$$ = \lim\limits_{n\ra \infty} \sum\limits_{k=0}^n \dfrac{1}{n+3k}$$
+		$$ = \lim\limits_{n\ra \infty} \sum\limits_{k=0}^n \dfrac{1}{n\left(1+\dfrac{3k}{n}\right)}$$
+		$$ = \dfrac{1}{3} \lim\limits_{n\ra \infty} \dfrac{3}{n} \sum\limits_{k=0}^n \dfrac{1}{1+\dfrac{3k}{n}}$$
+		Llegamos a una suma de Riemann, que esta asociada a la función $f(x) = \dfrac{1}{1+x}$ en el intervalo $[0, 3]$, por lo que
+		$$\lim\limits_{n\ra \infty} \sum\limits_{k=0}^n \dfrac{1}{n+3k} = \dfrac{1}{3} \displaystyle\int_0^3 \dfrac{dx}{1+x}$$
+\end{solucion}
+\item Resuelva las siguientes integrales
+\begin{tasks}(2)
+\task $\displaystyle\int 2xdx$
+\task $\displaystyle\int e^{ln(x^2)}dx$
+\task $\displaystyle\int 4cos(2x)dx$
+\task $\displaystyle\int 6e^{3x}dx$
+\end{tasks}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item $\displaystyle\int 2xdx = x^2 + c$
+\item $\displaystyle\int e^{ln(x^2)}dx = \displaystyle\int x^2dx = \dfrac{x^3}{3} + c$
+\item $\displaystyle\int 4cos(2x)dx = 2sen(2x) + c$
+\item $\displaystyle\int 6e^{3x}dx = 2e^{3x} + c$
+\end{enumerate}
+\end{solucion}
+\item $$F(x) = \displaystyle\int_0^{x^2} \dfrac{xtan(t)}{1+t^2}dt$$
+	Calule $F'(\pi /4)$
+\begin{solucion}
+En primer lugar, saquemos la variable $x$ de la integral
+		$$F(x) = x\displaystyle\int_0^{x^2} \dfrac{tan(t)}{1+t^2}dt$$
+		Fijemonos que estamos frente a dos funciones, por lo que debemos usar la regla de la multiplicación y luego el TFC.
+		$$F'(x) = \displaystyle\int_0^{x^2} \dfrac{tan(t)}{1+t^2}dt + 2x^2\left(\dfrac{tan(t)}{1+t^2}\ev_0^{x^2}\right)$$
+		$$= \displaystyle\int_0^{x^2} \dfrac{tan(t)}{1+t^2}dt + 2x^2\left(\dfrac{tan(x^2)}{1+x^4}\right)$$
+		Luego, evaluamos en $x = \pi /4, obteniendo$
+		$$F'(\pi /4) = \displaystyle\int_0^{(\pi /4)^2} \dfrac{tan(t)}{1+t^2}dt + 2(\pi /4)^2\left(\dfrac{tan((\pi /4)^2)}{1+(\pi /4)^4}\right)$$
+\end{solucion}
 \end{preguntas}
 \end{document}
