Solución de 2019/1/MAT1610/9

--- a/2019/1/MAT1610/9/solucion.tex
+++ b/2019/1/MAT1610/9/solucion.tex
@@ -178,11 +178,7 @@ $$F(x) = x^4$$
 \item $f(x) = 8x\sin (2x^2)$\\
 \\
 Para obtener la función $\sin(x)$ debemos derivar el $-\cos(x)$. Sin embargo, necesitamos que "aparezca" un $x$ afuera multiplicando la función. Esto lo podemos lograr con la regla de la cadena. Además, como al derivar una función con la regla de la cadena, lo que esta adentro se mantiene, debemos dejar $2x^2$ adentro del coseno. Luego,
-$$F(x) = -4\cos(2x^2)$$
-\item $f(x) = \dfrac{3}{2x}$\\
-\\
-Notemos que $f(x) = \dfrac{3}{2} \cdot \dfrac{1}{x}$. Luego,
-$$F(x) = \dfrac{3}{2} \ln(x)$$
+$$F(x) = -2\cos(2x^2)$$
 \item $f(x) = \dfrac{3}{2x}$\\
 \\
 Notemos que $f(x) = \dfrac{3}{2} \cdot \dfrac{1}{x}$. Luego,
@@ -190,7 +186,7 @@ $$F(x) = \dfrac{3}{2} \ln(x)$$
 \item $f(x) = \dfrac{1}{1+4x^2}$\\
 \\
 Es evidente que $f(x)= \dfrac{1}{1+(2x)^2}$, por lo que
-$$F(x) = \arctan(2x)$$
+$$F(x) = \dfrac{\arctan(2x)}{2}$$
 \end{enumerate}
 \end{solucion}
 \end{preguntas}
