Enunciado de 2019/1/MAT1610/10

--- a/2019/1/MAT1610/10/enunciado.tex
+++ b/2019/1/MAT1610/10/enunciado.tex
@@ -115,8 +115,14 @@
 \begin{preguntas}
 \item Calcule la siguiente integral, usando la definición de esta
 	$$\int_2^5(4-2x)dx$$
-\item Exprese el siguiente límite como una integral
-	$$\lim\limits_{n\ra \infty} \sum\limits_{k=0}^n \dfrac{1}{n+3k}$$
+\item Exprese los siguientes límites como una integral
+	
+\begin{enumerate}[a)]
+\item $\lim\limits_{n\ra \infty} \sum\limits_{k=0}^n \dfrac{1}{n+3k}$
+\item $\lim\limits_{n\ra \infty} \sum\limits_{k=1}^n \dfrac{1}{(n+k)^2}$
+\end{enumerate}
+\item Convierta el siguiente límite en una integral, expresándolo como una Suma de Riemann
+$$\lim\limits_{n \ra \infty} \dfrac{n+1}{n^2+1} + \dfrac{n+2}{n^2+4} + \dots  + \dfrac{n+n}{n^2+n^2}$$
 \item Resuelva las siguientes integrales
 \begin{tasks}(2)
 \task $\displaystyle\int 2xdx$
