--- a/2019/1/MAT1610/10/enunciado.tex
+++ b/2019/1/MAT1610/10/enunciado.tex
@@ -117,10 +117,10 @@
 	$$\int_2^5(4-2x)dx$$
 \item Exprese los siguientes límites como una integral
 	
-\begin{enumerate}[a)]
-\item $\lim\limits_{n\ra \infty} \sum\limits_{k=0}^n \dfrac{1}{n+3k}$
-\item $\lim\limits_{n\ra \infty} \sum\limits_{k=1}^n \dfrac{1}{(n+k)^2}$
-\end{enumerate}
+\begin{tasks}(2)
+\task $\lim\limits_{n\ra \infty} \sum\limits_{k=0}^n \dfrac{1}{n+3k}$
+\task $\lim\limits_{n\ra \infty} \sum\limits_{k=1}^n \dfrac{1}{(n+k)^2}$
+\end{tasks}
 \item Convierta el siguiente límite en una integral, expresándolo como una Suma de Riemann
 $$\lim\limits_{n \ra \infty} \dfrac{n+1}{n^2+1} + \dfrac{n+2}{n^2+4} + \dots  + \dfrac{n+n}{n^2+n^2}$$
 \item Resuelva las siguientes integrales
@@ -130,7 +130,8 @@ $$\lim\limits_{n \ra \infty} \dfrac{n+1}{n^2+1} + \dfrac{n+2}{n^2+4} + \dots  + 
 \task $\displaystyle\int 4cos(2x)dx$
 \task $\displaystyle\int 6e^{3x}dx$
 \end{tasks}
-\item $$F(x) = \displaystyle\int_0^{x^2} \dfrac{xtan(t)}{1+t^2}dt$$
+\item Sea
+$$F(x) = \displaystyle\int_0^{x^2} \dfrac{xtan(t)}{1+t^2}dt$$
 	Calule $F'(\pi /4)$
 \end{preguntas}
 \end{document}
