Enunciado de 2019/1/MAT1610/10

--- a/2019/1/MAT1610/10/enunciado.tex
+++ b/2019/1/MAT1610/10/enunciado.tex
@@ -119,10 +119,8 @@
 	
 \begin{tasks}(2)
 \task $\lim\limits_{n\ra \infty} \sum\limits_{k=0}^n \dfrac{1}{n+3k}$
-\task $\lim\limits_{n\ra \infty} \sum\limits_{k=1}^n \dfrac{1}{(n+k)^2}$
+\task $\lim\limits_{n \ra \infty} \dfrac{n+1}{n^2+1} + \dfrac{n+2}{n^2+4} + \dots  + \dfrac{n+n}{n^2+n^2}$
 \end{tasks}
-\item Convierta el siguiente límite en una integral, expresándolo como una Suma de Riemann
-$$\lim\limits_{n \ra \infty} \dfrac{n+1}{n^2+1} + \dfrac{n+2}{n^2+4} + \dots  + \dfrac{n+n}{n^2+n^2}$$
 \item Resuelva las siguientes integrales
 \begin{tasks}(2)
 \task $\displaystyle\int 2xdx$
