--- a/2019/1/MAT1610/10/solucion.tex
+++ b/2019/1/MAT1610/10/solucion.tex
@@ -132,7 +132,7 @@ Usando la integral por definición, podemos escribir la integral como
 	
 \begin{tasks}(2)
 \task $\lim\limits_{n\ra \infty} \sum\limits_{k=0}^n \dfrac{1}{n+3k}$
-\task $\lim\limits_{n\ra \infty} \sum\limits_{k=1}^n \dfrac{1}{(n+k)^2}$
+\task $\lim\limits_{n \ra \infty} \dfrac{n+1}{n^2+1} + \dfrac{n+2}{n^2+4} + \dots  + \dfrac{n+n}{n^2+n^2}$
 \end{tasks}
 \begin{solucion}
 Para lograr esto, debemos acomodar el límite para que tenga la estructura de una Suma de Riemann, es decir,
@@ -146,11 +146,6 @@ Para lograr esto, debemos acomodar el límite para que tenga la estructura de un
 		$$\lim\limits_{n\ra \infty} \sum\limits_{k=0}^n \dfrac{1}{n+3k} = \dfrac{1}{3} \displaystyle\int_0^3 \dfrac{dx}{1+x}$$
 \item 
 \end{enumerate}
-\end{solucion}
-\item Convierta el siguiente límite en una integral, expresándolo como una Suma de Riemann
-$$\lim\limits_{n \ra \infty} \dfrac{n+1}{n^2+1} + \dfrac{n+2}{n^2+4} + \dots  + \dfrac{n+n}{n^2+n^2}$$
-\begin{solucion}
-
 \end{solucion}
 \item Resuelva las siguientes integrales
 \begin{tasks}(2)
