--- a/2019/1/MAT1610/10/solucion.tex
+++ b/2019/1/MAT1610/10/solucion.tex
@@ -144,7 +144,18 @@ Para lograr esto, debemos acomodar el límite para que tenga la estructura de un
 		$$ = \dfrac{1}{3} \lim\limits_{n\ra \infty} \dfrac{3}{n} \sum\limits_{k=0}^n \dfrac{1}{1+\dfrac{3k}{n}}$$
 		Llegamos a una suma de Riemann, que esta asociada a la función $f(x) = \dfrac{1}{1+x}$ en el intervalo $[0, 3]$, por lo que
 		$$\lim\limits_{n\ra \infty} \sum\limits_{k=0}^n \dfrac{1}{n+3k} = \dfrac{1}{3} \displaystyle\int_0^3 \dfrac{dx}{1+x}$$
-\item 
+\item $\lim\limits_{n \ra \infty} \dfrac{n+1}{n^2+1} + \dfrac{n+2}{n^2+4} + \dots  + \dfrac{n+n}{n^2+n^2}$\\
+\\
+Notemos que esto se puede esribir como,
+$$\lim\limits_{n \ra \infty} \sum\limits_{k=1}^n \dfrac{n+k}{n^2+k^2}$$
+Amplificando por $\dfrac{1}{n^2}$,
+$$= \lim\limits_{n \ra \infty} \sum\limits_{k=1}^n \dfrac{n+k}{n^2+k^2}\cdot \dfrac{\frac{1}{n^2}}{\frac{1}{n^2}}$$
+$$= \lim\limits_{n \ra \infty} \sum\limits_{k=1}^n \dfrac{\frac{1}{n}+\frac{k}{n^2}}{1+\left(\frac{k}{n}\right)^2}$$
+Luego, factorizamos por $\dfrac{1}{n}$,
+$$= \lim\limits_{n \ra \infty} \sum\limits_{k=1}^n \dfrac{1}{n} \cdot \dfrac{1+\frac{k}{n}}{1+\left(\frac{k}{n}\right)^2}$$
+$$= \lim\limits_{n \ra \infty} \dfrac{1}{n}  \sum\limits_{k=1}^n \dfrac{1+\frac{k}{n}}{1+\left(\frac{k}{n}\right)^2}$$
+Ahora, tenemos una Suma de Riemann que esta asociada al intervalo $[0, 1]$ y la función $f(x) = \dfrac{1+x}{1+x^2}$, por lo que
+$$\lim\limits_{n \ra \infty} \dfrac{n+1}{n^2+1} + \dfrac{n+2}{n^2+4} + \dots  + \dfrac{n+n}{n^2+n^2} = \int_0^1 \dfrac{1+x}{1+x^2} dx$$
 \end{enumerate}
 \end{solucion}
 \item Resuelva las siguientes integrales
