Enunciado de 2018/1/MAT1203/11

--- a/2018/1/MAT1203/11/enunciado.tex
+++ b/2018/1/MAT1203/11/enunciado.tex
@@ -113,5 +113,22 @@
 \end{center}
 
 \begin{preguntas}
+\item Sea $A$ una matriz invertible, y sea $\lambda$ un valor propio de $A$. Demuestre que $\lambda \neq 0$ y que $\dfrac{1}{\lambda}$ es un valor propio de $A^{-1}$.
+\item Sea $A$ una matriz de $2\times 2$ de rango 1 tal que $A\begin{bmatrix} 1 \\ 2\end{bmatrix} = \begin{bmatrix} 2 \\ 4 \end{bmatrix}$. ¿Es $A$ diagonalizable? Justifique.
+\item Diagonalice la matriz
+	$$M = \begin{bmatrix}
+	1 & 0 & 0\\
+	1 & 1 & 2 \\
+	1 & 0 & 3
+	\end{bmatrix}$$
+	y encuentre una matriz $N$ tal que $N^3 = M$.
+\item Diagonalice $A =
+	\begin{bmatrix} 
+	-1 & -2 & 2 \\
+	0 & -1 & 0 \\
+	0 & -2 & 1
+	\end{bmatrix}$ y diagonalice $B = A^{10} + A - I$ 
+\item La matriz $\begin{bmatrix} 1 & -2 \\ 1 & 3 \end{bmatrix}$ actúa sobre $\mathbb{C}^2$. Determine los valores propios y una base para cada espacio propio de $\mathbb{C}^2$.
+\item Sea $A$ una matriz de $5 \times 5$ tal que $A^t = -A$ y $q$ el polinomio dado por $q(x) = 2-x^2+4x^3$. Demuestre que $2$ es valor propio de la matriz $q(A)$.
 \end{preguntas}
 \end{document}
