Solución de 2019/1/MAT1610/8.5

--- a/2019/1/MAT1610/8.5/solucion.tex
+++ b/2019/1/MAT1610/8.5/solucion.tex
@@ -196,15 +196,6 @@ $$h'(x) = f'(f(1))(f(1) + f'(1))$$
 Finalmente, reemplazando con la información del enunciado,
 $$h'(x) = f'(2)(2+4) = 5\cdot 6 = 30$$
 \end{solucion}
-\item Si $h(x) = f(x\ f(x))$ donde $f(1)=2$, $f'(1)=4$ y $f'(2) = 5$, encuentre $h'(1)$.
-\begin{solucion}
-Por la regla de la cadena, tenemos que
-$$h'(x) = f'(x\ f(x)) (x\ f(x))' = f'(x\ f(x))(f(x) + xf'(x))$$
-Luego, reemplazando en $x=1$, tenemos que
-$$h'(x) = f'(f(1))(f(1) + f'(1))$$
-Finalmente, reemplazando con la información del enunciado,
-$$h'(x) = f'(2)(2+4) = 5\cdot 6 = 30$$
-\end{solucion}
 \item Sea $f(x) = ln(x^2+3^x)$. Determine $f'(0) + f''(0)$.
 \begin{solucion}
 Derivando, usando la regla de la cadena, tenemos
@@ -290,7 +281,7 @@ $$2x^2yy' + 3e^{3y}y' = -2xy^2$$
 $$y'(2x^2y + 3e^{3y}) = -2xy^2$$
 $$y' = \dfrac{-2xy^2}{2x^2y + 3e^{3y}}$$
 Luego, los puntos donde la tangente es horizontal corresponden a
-$$y'= 0 \ra \dfrac{-2xy^2}{2x^2y + 3e^{2y}} = 0 \ra -2xy^2 = 0 \ra x = 0 \vee y = 0$$
+$$y'= 0 \ra \dfrac{-2xy^2}{2x^2y + 3e^{3y}} = 0 \ra -2xy^2 = 0 \ra x = 0 \vee y = 0$$
 Sin embargo, notemos que al reemplazar $y=0$ en la ecuación de la curva, obtenemos
 $$1 = e$$
 Por lo que no existe ningún punto en la curva donde $y=0$.\\
@@ -411,7 +402,7 @@ $$\dfrac{dh}{dt} = \dfrac{4}{36\pi}\cdot 9 = \dfrac{1}{\pi} m/min$$
 $$PV = nRT$$
 donde $n$ es constante y corresponde al número de moles del gas y $R = 0,0821$ es la constante de los gases.\\
 Suponga que en el instante $t_0$ la presión $P$ es igual a 8 $atm$ y que esta aumenta a razón de 0,1 $atm/min$. Además se sabe que en ese mismo instante el volumen $V$ es de 10 litros y que este disminuye a razón de 0,15 $lt/min$.\\
-Determine la razón de cambio de $T$, con respecto al tiempoo, en el instante $t_0$, sabiendo que la constante $n = 10\ mol$.
+Determine la razón de cambio de $T$, con respecto al tiempo, en el instante $t_0$, sabiendo que la constante $n = 10\ mol$.
 \begin{solucion}
 En el instante $t_0$, tenemos
 $$P = 8\ atm, \qquad P' = 0.1\ atm/min$$
