Enunciado de 2018/1/MAT220E/2

--- a/2018/1/MAT220E/2/enunciado.tex
+++ b/2018/1/MAT220E/2/enunciado.tex
@@ -113,5 +113,8 @@
 \end{center}
 
 \begin{preguntas}
+\item Sea
+$$F(x) = \displaystyle\int_0^{x^2} \dfrac{xtan(t)}{1+t^2}dt$$
+	Calule $F'(\pi /4)$
 \end{preguntas}
 \end{document}
