Enunciado de 2018/1/MAT220E/2

--- a/2018/1/MAT220E/2/enunciado.tex
+++ b/2018/1/MAT220E/2/enunciado.tex
@@ -113,8 +113,9 @@
 \end{center}
 
 \begin{preguntas}
-\item Sea
-$$F(x) = \displaystyle\int_0^{x^2} \dfrac{xtan(t)}{1+t^2}dt$$
-	Calule $F'(\pi /4)$
+\item Determine el valor de $r$ de modo que $y(x) = e^{rx}$ sea solución de la ecuación:
+	$$3y'' + 3y' - 4y=0$$
+\item Calcule $\lim\limits_{x \ra 0+} x^{x}
+\item Sea $a_n = \dfrac{n!}{n^n}$, calcular $\lim\limits_{n \ra \infty} \dfrac{a_{n+1}}{a_n}$
 \end{preguntas}
 \end{document}
