--- a/2018/1/MAT220E/2/enunciado.tex
+++ b/2018/1/MAT220E/2/enunciado.tex
@@ -117,5 +117,26 @@
 	$$3y'' + 3y' - 4y=0$$
 \item Calcule $\lim\limits_{x \ra 0+} x^{x}
 \item Sea $a_n = \dfrac{n!}{n^n}$, calcular $\lim\limits_{n \ra \infty} \dfrac{a_{n+1}}{a_n}$
+\item Calcular $F'(0)$, siendo
+	$$F(x) = \displaystyle\int_0^{5x+1} \dfrac{e^{t^2}}{1+t^4}dt$$
+\item Resolver las siguientes integrales indefinidas
+\begin{tasks}(2)
+\task $\displaystyle\int (3x^2 + 2x + 1)dx$
+\task $\displaystyle\int x(x+1)(x+2)dx$
+\task $\displaystyle\int sen^2(x)dx$
+\task $\displaystyle\int (1+e)^xdx$
+\end{tasks}
+\item Resolver las siguientes integrales indefinidas
+\begin{tasks}(2)
+\task $\displaystyle\int \dfrac{e^{ln(x)}}{x^2+7}dx$
+\task $\displaystyle\int (x+2)sen(x^2+4x-6)dx$
+\task $\displaystyle\int \dfrac{3x}{\sqrt[3]{x^2+3}}dx$
+\task $\displaystyle\int \dfrac{e^x-1}{e^x+1}dx$
+\end{tasks}
+\item Resolver las siguientes integrales definidas
+\begin{tasks}(2)
+\task $\displaystyle\int_0^2 \dfrac{x^2}{x^3+8} dx$
+\task $\displaystyle\int_{-1}^1 xsen(1-x^2)dx$
+\end{tasks}
 \end{preguntas}
 \end{document}
