--- a/2018/1/MAT220E/2/solucion.tex
+++ b/2018/1/MAT220E/2/solucion.tex
@@ -142,5 +142,83 @@ $$\lim\limits_{n \ra \infty} \dfrac{a_{n+1}}{a_n} = \lim\limits_{n \ra \infty} \
 		$$=\lim\limits_{n \ra \infty} \dfrac{n^n}{(n+1)^{n}} = \lim\limits_{n \ra \infty} \left(\dfrac{n}{n+1}\right)^n = \lim\limits_{n \ra \infty} \dfrac{1}{\left(\dfrac{n+1}{n}\right)^n} = \lim\limits_{n \ra \infty} \dfrac{1}{\left(1+\dfrac{1}{n}\right)^n}$$
 		$$ = \dfrac{1}{e}$$
 \end{solucion}
+\item Calcular $F'(0)$, siendo
+	$$F(x) = \displaystyle\int_0^{5x+1} \dfrac{e^{t^2}}{1+t^4}dt$$
+\begin{solucion}
+Usando el TFC, tenemos que
+		$$F'(x) = \dfrac{e^{(5x+1)^2}}{1+(5x+1)^4} \cdot 5$$
+		Luego, evaluamos en $x=0$
+		$$F'(0) = \dfrac{5e^{(1)^2}}{1+(1)^4} = \dfrac{5e}{2}$$
+\end{solucion}
+\item Resolver las siguientes integrales indefinidas
+\begin{tasks}(2)
+\task $\displaystyle\int (3x^2 + 2x + 1)dx$
+\task $\displaystyle\int x(x+1)(x+2)dx$
+\task $\displaystyle\int sen^2(x)dx$
+\task $\displaystyle\int (1+e)^xdx$
+\end{tasks}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item $\displaystyle\int (3x^2 + 2x + 1)dx = \displaystyle\int 3x^2dx + \displaystyle\int 2xdx + \displaystyle\int dx  = 3\displaystyle\int x^2dx + 2\displaystyle\int xdx + \displaystyle\int dx $
+			$$= 3\dfrac{x^3}{3} + 2\dfrac{x^2}{2} + x + c = x^3 + x^2 + x + c$$
+\item $\displaystyle\int x(x+1)(x+2)dx = \displaystyle\int (x^3+3x^2+2x)dx = \dfrac{x^4}{4}+x^3+x+c$
+\item $\displaystyle\int sen^2(x)dx = \displaystyle\int \dfrac{1-cos(2x)}{2}dx = \displaystyle\int \dfrac{1}{2}dx - \displaystyle\int \dfrac{cos(2x)}{2} = \dfrac{x}{2} -\dfrac{sen(2x)}{4} + c$
+\item $\displaystyle\int (1+e)^xdx = \dfrac{(1+e)^x}{ln(1+e)}$
+\end{enumerate}
+\end{solucion}
+\item Resolver las siguientes integrales indefinidas
+\begin{tasks}(2)
+\task $\displaystyle\int \dfrac{e^{ln(x)}}{x^2+7}dx$
+\task $\displaystyle\int (x+2)sen(x^2+4x-6)dx$
+\task $\displaystyle\int \dfrac{3x}{\sqrt[3]{x^2+3}}dx$
+\task $\displaystyle\int \dfrac{e^x-1}{e^x+1}dx$
+\end{tasks}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item $\displaystyle\int \dfrac{e^{ln(x)}}{x^2+7}dx = \displaystyle\int \dfrac{x}{x^2+7}dx$\\
+			Usamos la sustitución $u = x^2+7 \ra du = 2xdx$
+			$$= \dfrac{1}{2} \displaystyle\int \dfrac{2}{u}dx = \dfrac{1}{2} ln(u) + c = \dfrac{1}{2}ln(x^2+7) + c$$
+\item $\displaystyle\int (x+2)sen(x^2+4x-6)dx$\\
+			Utilizando la sustitución $u = x^2+4x-6 \ra du = 2x + 4 \ra du = 2(x+2)$
+			$$=\dfrac{1}{2}\displaystyle\int sen(u)du = -\dfrac{1}{2}cos(u) = -\dfrac{1}{2}cos(x^2+4x-6)+c$$
+\item $\displaystyle\int \dfrac{3x}{\sqrt[3]{x^2+3}}dx$\\
+			La sustitución a usar es $u=x^2+3 \ra du=2xdx$
+			$$= \dfrac{3}{2} \displaystyle\int \dfrac{1}{\sqrt[3]{u}}du = \dfrac{3}{2} \displaystyle\int \dfrac{1}{u^{1/3}}du = \dfrac{3}{2} \displaystyle\int u^{-1/3}du = \dfrac{3}{2}\dfrac{u^{2/3}}{\frac{2}{3}} + c = \dfrac{9}{4}(t^2+3)^{2/3}+c$$
+\item $\displaystyle\int \dfrac{e^x-1}{e^x+1}dx = \displaystyle\int \dfrac{e^x}{e^x+1}dx - \displaystyle\int \dfrac{1}{e^x+1}dx$\\
+			Resolvamos ambas por separado. En primer lugar,
+			$$ \displaystyle\int \dfrac{e^x}{e^x+1}dx$$
+			Utilizamos la sustitución $u=e^x+1 \ra du=e^x$
+			$$= \displaystyle\int \dfrac{du}{u} = ln(u) + c = ln(e^x+1)+c$$
+			Ahora, resolveremos
+			$$-\displaystyle\int \dfrac{1}{e^x+1}dx = -\displaystyle\int \dfrac{e^xe^{-x}}{e^x+1}dx= -\displaystyle\int \dfrac{e^{-x}}{e^{-x}(e^x+1)}dx = -\displaystyle\int \dfrac{e^{-x}}{1+e^{-x}}dx$$
+			Usando $u=1+e^{-x} \ra du = -e^{-x}$
+			$$= \displaystyle\int \dfrac{du}{u}dx = ln(u) +c = ln(1+e^{-x})+c$$
+			Por último, al sumar ambas obtenemos
+			$$\displaystyle\int \dfrac{e^x-1}{e^x+1}dx = ln(1+e^x) + ln(1+e^{-x}) + c = ln((1+e^x)(1+e^{-x}))+c$$
+\end{enumerate}
+\end{solucion}
+\item Resolver las siguientes integrales definidas
+\begin{tasks}(2)
+\task $\displaystyle\int_0^2 \dfrac{x^2}{x^3+8} dx$
+\task $\displaystyle\int_{-1}^1 xsen(1-x^2)dx$
+\end{tasks}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item $\displaystyle\int_0^2 \dfrac{x^2}{x^3+8} dx$\\
+			Usando la sustitución
+			$$u=x^3+8 \ra du =  3x^2dx$$
+			$$x \in (0, 2) \ra u \in (8, 16)$$
+			$$\displaystyle\int_0^2 \dfrac{x^2}{x^3+8}dx = \dfrac{1}{3}\displaystyle\int_8^{16} \dfrac{du}{u} = \dfrac{1}{3}ln(u) \ev_8^{16} = \dfrac{1}{3}(ln(16)-ln(8)) = \dfrac{1}{3}ln\left(\dfrac{16}{8}\right) = \dfrac{1}{3}ln(2)$$
+\item $\displaystyle\int_{-1}^1 xsen(1-x^2)dx$\\
+			Usamos el cambio de variable
+			$$u = 1-x^2 \ra du = -2xdx$$
+			$$x \in (-1, 1) \ra u \in (0, 0)$$
+			Como la variable $u$ va de 0 a 0, entonces la integral es igual a 0. Luego,
+			$$\displaystyle\int_{-1}^1 xsen(1-x^2)dx = 0$$
+\end{enumerate}
+\end{solucion}
 \end{preguntas}
 \end{document}
