Enunciado de 2019/1/MAT1610/11

--- a/2019/1/MAT1610/11/enunciado.tex
+++ b/2019/1/MAT1610/11/enunciado.tex
@@ -113,5 +113,17 @@
 \end{center}
 
 \begin{preguntas}
+\item Resolver las siguientes integrales indefinidas
+\begin{tasks}(2)
+\task $\displaystyle\int \dfrac{e^{ln(x)}}{x^2+7}dx$
+\task $\displaystyle\int (x+2)sen(x^2+4x-6)dx$
+\task $\displaystyle\int \dfrac{3x}{\sqrt[3]{x^2+3}}dx$
+\task $\displaystyle\int \dfrac{e^x-1}{e^x+1}dx$
+\end{tasks}
+\item Resolver las siguientes integrales definidas
+\begin{tasks}(2)
+\task $\displaystyle\int_0^2 \dfrac{x^2}{x^3+8} dx$
+\task $\displaystyle\int_{-1}^1 xsen(1-x^2)dx$
+\end{tasks}
 \end{preguntas}
 \end{document}
