--- a/2019/1/MAT1610/11/solucion.tex
+++ b/2019/1/MAT1610/11/solucion.tex
@@ -113,5 +113,58 @@
 \end{center}
 
 \begin{preguntas}
+\item Resolver las siguientes integrales indefinidas
+\begin{tasks}(2)
+\task $\displaystyle\int \dfrac{e^{ln(x)}}{x^2+7}dx$
+\task $\displaystyle\int (x+2)sen(x^2+4x-6)dx$
+\task $\displaystyle\int \dfrac{3x}{\sqrt[3]{x^2+3}}dx$
+\task $\displaystyle\int \dfrac{e^x-1}{e^x+1}dx$
+\end{tasks}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item $\displaystyle\int \dfrac{e^{ln(x)}}{x^2+7}dx = \displaystyle\int \dfrac{x}{x^2+7}dx$\\
+			Usamos la sustitución $u = x^2+7 \ra du = 2xdx$
+			$$= \dfrac{1}{2} \displaystyle\int \dfrac{2}{u}dx = \dfrac{1}{2} ln(u) + c = \dfrac{1}{2}ln(x^2+7) + c$$
+\item $\displaystyle\int (x+2)sen(x^2+4x-6)dx$\\
+			Utilizando la sustitución $u = x^2+4x-6 \ra du = 2x + 4 \ra du = 2(x+2)$
+			$$=\dfrac{1}{2}\displaystyle\int sen(u)du = -\dfrac{1}{2}cos(u) = -\dfrac{1}{2}cos(x^2+4x-6)+c$$
+\item $\displaystyle\int \dfrac{3x}{\sqrt[3]{x^2+3}}dx$\\
+			La sustitución a usar es $u=x^2+3 \ra du=2xdx$
+			$$= \dfrac{3}{2} \displaystyle\int \dfrac{1}{\sqrt[3]{u}}du = \dfrac{3}{2} \displaystyle\int \dfrac{1}{u^{1/3}}du = \dfrac{3}{2} \displaystyle\int u^{-1/3}du = \dfrac{3}{2}\dfrac{u^{2/3}}{\frac{2}{3}} + c = \dfrac{9}{4}(t^2+3)^{2/3}+c$$
+\item $\displaystyle\int \dfrac{e^x-1}{e^x+1}dx = \displaystyle\int \dfrac{e^x}{e^x+1}dx - \displaystyle\int \dfrac{1}{e^x+1}dx$\\
+			Resolvamos ambas por separado. En primer lugar,
+			$$ \displaystyle\int \dfrac{e^x}{e^x+1}dx$$
+			Utilizamos la sustitución $u=e^x+1 \ra du=e^x$
+			$$= \displaystyle\int \dfrac{du}{u} = ln(u) + c = ln(e^x+1)+c$$
+			Ahora, resolveremos
+			$$-\displaystyle\int \dfrac{1}{e^x+1}dx = -\displaystyle\int \dfrac{e^xe^{-x}}{e^x+1}dx= -\displaystyle\int \dfrac{e^{-x}}{e^{-x}(e^x+1)}dx = -\displaystyle\int \dfrac{e^{-x}}{1+e^{-x}}dx$$
+			Usando $u=1+e^{-x} \ra du = -e^{-x}$
+			$$= \displaystyle\int \dfrac{du}{u}dx = ln(u) +c = ln(1+e^{-x})+c$$
+			Por último, al sumar ambas obtenemos
+			$$\displaystyle\int \dfrac{e^x-1}{e^x+1}dx = ln(1+e^x) + ln(1+e^{-x}) + c = ln((1+e^x)(1+e^{-x}))+c$$
+\end{enumerate}
+\end{solucion}
+\item Resolver las siguientes integrales definidas
+\begin{tasks}(2)
+\task $\displaystyle\int_0^2 \dfrac{x^2}{x^3+8} dx$
+\task $\displaystyle\int_{-1}^1 xsen(1-x^2)dx$
+\end{tasks}
+\begin{solucion}
+
+\begin{enumerate}[a)]
+\item $\displaystyle\int_0^2 \dfrac{x^2}{x^3+8} dx$\\
+			Usando la sustitución
+			$$u=x^3+8 \ra du =  3x^2dx$$
+			$$x \in (0, 2) \ra u \in (8, 16)$$
+			$$\displaystyle\int_0^2 \dfrac{x^2}{x^3+8}dx = \dfrac{1}{3}\displaystyle\int_8^{16} \dfrac{du}{u} = \dfrac{1}{3}ln(u) \ev_8^{16} = \dfrac{1}{3}(ln(16)-ln(8)) = \dfrac{1}{3}ln\left(\dfrac{16}{8}\right) = \dfrac{1}{3}ln(2)$$
+\item $\displaystyle\int_{-1}^1 xsen(1-x^2)dx$\\
+			Usamos el cambio de variable
+			$$u = 1-x^2 \ra du = -2xdx$$
+			$$x \in (-1, 1) \ra u \in (0, 0)$$
+			Como la variable $u$ va de 0 a 0, entonces la integral es igual a 0. Luego,
+			$$\displaystyle\int_{-1}^1 xsen(1-x^2)dx = 0$$
+\end{enumerate}
+\end{solucion}
 \end{preguntas}
 \end{document}
