--- a/2018/1/MAT220E/5/solucion.tex
+++ b/2018/1/MAT220E/5/solucion.tex
@@ -113,5 +113,136 @@
 \end{center}
 
 \begin{preguntas}
+\item Calule el área de la región acotada por las curvas $y=x^2-4$ e $y = -x^2-2x$ en el intervalo $I =  [-3.3]$.
+\begin{solucion}
+Con ayuda del gráfico
+		\begin{center}
+			\begin{tikzpicture}
+			\begin{axis}[
+			axis lines = left,
+			xlabel = $x$,
+			ylabel = $y$,
+			]
+			\addplot [
+			domain=-3:3,  
+			color=red,
+			]
+			{x^2-4};
+			\addplot [
+			domain=-3:3, 
+			color=blue,
+			]
+			{-x^2-2*x};
+			
+			\end{axis}
+			\end{tikzpicture}
+		\end{center}
+		Podemos ver que el área acotada por las curvas la podemos separar en 3, quedandonos
+		$$A = \displaystyle\int_{-3}^{-2}[x^2-4-(-x^2-2x)]dx 
+		+ \displaystyle\int_{-2}^{1}[-x^2-2x-(x^2-4)]dx 
+		+ \displaystyle\int_{1}^{3}[x^2-4-(-x^2-2x)]dx$$
+		$$A = \displaystyle\int_{-3}^{-2}(2x^2+2x-4)dx 
+		+ \displaystyle\int_{-2}^{1}(4-2x-2x^2)dx 
+		+ \displaystyle\int_{1}^{3}(2x^2+2x-4)dx$$
+		$$A = \dfrac{11}{3} + 9 + \dfrac{52}{3} = \dfrac{90}{3} = 30$$
+\end{solucion}
+\item Encuentre el área acotada por las curvas por las curvas $y=x(x^2+11)$ e $y=6(x^2+1)$.
+\begin{solucion}
+Buscamos los puntos de intersección de ambas curvas, igualandolas
+		$$x(x^2+11) = 6(x^2+1)$$
+		$$x(x^2+11) - 6(x^2+1) = 0$$
+		$$x^3-6x^2+11x-6 = 0$$
+		$$(x-1)(x-2)(x-3)=0$$
+		Tenemos entonces que las curvas se intersectan en $x=1, x=2$ y $x=3$.\\
+		Necesitamos ver ahora cual curva va arriba y cual abajo. Notemos que
+		$$x^3-6x^2+11x-6 \geq 0\quad si \qquad 1 \leq x \leq 2$$
+		$$x^3-6x^2+11x-6 \leq 0\quad si \qquad 2 \leq x \leq 3$$
+		Con lo que concluimos que en $[1,2]$ la curva $y=x(x^2+11)$ va sobre la curva $y=6(x^2+1)$ y que en $[2,3]$ pasa lo contrario.\\
+		Finalmente,
+		$$A = \displaystyle\int_{1}^{2}[x(x^2+11) - 6(x^2+1)]dx 
+		+ \displaystyle\int_{2}^{3}[6(x^2+1) - x(x^2+11)]dx$$ 
+		$$A = \displaystyle\int_{1}^{2}(x^3-6x^2+11x-6)dx 
+		+ \displaystyle\int_{2}^{3}(6-11x+6x^2-x^3)dx$$ 
+		$$A = \dfrac{1}{4} + \dfrac{1}{4} = \dfrac{1}{2}$$
+\end{solucion}
+\item Determine el área limitada por la parabola $y^2=4x$ y la recta $y=x$.
+\begin{solucion}
+\begin{center}
+			\begin{tikzpicture}
+			\begin{axis}[
+			axis lines = left,
+			xlabel = $x$,
+			ylabel = $y$,
+			]
+			\addplot [
+			domain=0:4,  
+			color=red,
+			]
+			{2*x^(1/2)};
+			\addplot [
+			domain=0:4, 
+			color=blue,
+			]
+			{x};
+			
+			\end{axis}
+			\end{tikzpicture}
+		\end{center}
+		Integramos en el eje $y$, en $[0,4]$. Para esto, usaremos las ecuaciones $x=y$ y $x=\dfrac{y^2}{4}$, por lo que el área buscada será
+		$$A = \displaystyle\int_0^4 y-\dfrac{y^2}{4} dy$$
+		$$A = \dfrac{16}{2} - \dfrac{64}{12} = \dfrac{8}{3}$$
+\end{solucion}
+\item Hallar el área de la elipse
+	$$\dfrac{x^2}{9} + \dfrac{y^2}{4} = 1$$
+\begin{solucion}
+En primer lugar, despejemos $y$, es decir
+		$$y = \pm\dfrac{2\ \sqrt[]{9 - x^2}}{3}$$
+		Para encontrar el área, podemos buscar el área de un cuarto de la elipse y multiplicarla por 4, es decir
+		$$A = 4\displaystyle\int_0^3 \dfrac{2\ \sqrt[]{9 - x^2}}{3}dx$$
+		Utilizamos el cambio de variable $x =3sen(\theta) \ra dx = 3cos(\theta)d\theta$
+		$$A = 4\displaystyle\int_0^{\pi/2} \dfrac{2\ \sqrt[]{9 - 9sen^2(\theta)}}{3} 3cos(\theta)d\theta$$
+		$$A = 4\displaystyle\int_0^{\pi/2} \dfrac{2 \cdot 3cos(\theta)}{3} 3cos(\theta)d\theta$$
+		$$A = 24\displaystyle\int_0^{\pi/2} cos^2(\theta)d\theta$$
+		$$A = 24\displaystyle\int_0^{\pi/2} \dfrac{1+cos(2\theta)}{2}d\theta$$
+		$$A = 24 \cdot \dfrac{\pi}{4}$$
+		$$A = 6 \pi$$
+\end{solucion}
+\item Usando integrales, calcule el área del siguiente triangulo
+	\begin{center}
+		\begin{tikzpicture}
+		\begin{axis}[
+		axis lines = left,
+		xlabel = $x$,
+		ylabel = $y$,
+		]
+		\addplot [
+		domain=0:2,  
+		color=red,
+		]
+		{x};
+		\addplot [
+		domain=0:1, 
+		color=red,
+		]
+		{-x};
+		\addplot [
+		domain=1:2, 
+		color=red,
+		]
+		{3*x-4};
+		
+		\end{axis}
+		\end{tikzpicture}
+	\end{center}
+\begin{solucion}
+Notemos que los lados del triangulo se pueden representar como rectas. Esto es,
+		$$L_1:\quad y = x$$
+		$$L_2:\quad y = -x$$
+		$$L_3:\quad y = 3x-4$$
+		Luego, al área de triangulo será
+		$$A = \displaystyle\int_0^1 (x - (-x))dx + \displaystyle\int_1^2 (x - (3x-4))dx$$
+		$$A = \displaystyle\int_0^1 2xdx + \displaystyle\int_1^2 (4-2x)dx$$
+		$$A = 2$$
+\end{solucion}
 \end{preguntas}
 \end{document}
