--- a/2019/1/MAT1610/11/enunciado.tex
+++ b/2019/1/MAT1610/11/enunciado.tex
@@ -125,5 +125,9 @@
 \task $\displaystyle\int_0^2 \dfrac{x^2}{x^3+8} dx$
 \task $\displaystyle\int_{-1}^1 xsen(1-x^2)dx$
 \end{tasks}
+\item Calule el área de la región acotada por las curvas $y=x^2-4$ e $y = -x^2-2x$ en el intervalo $I =  [-3.3]$.
+\item Encuentre el área acotada por las curvas por las curvas $y=x(x^2+11)$ e $y=6(x^2+1)$.
+\item Hallar el área de la elipse
+	$$\dfrac{x^2}{9} + \dfrac{y^2}{4} = 1$$
 \end{preguntas}
 \end{document}
