--- a/2019/1/MAT1610/11/solucion.tex
+++ b/2019/1/MAT1610/11/solucion.tex
@@ -166,5 +166,72 @@
 			$$\displaystyle\int_{-1}^1 xsen(1-x^2)dx = 0$$
 \end{enumerate}
 \end{solucion}
+\item Calule el área de la región acotada por las curvas $y=x^2-4$ e $y = -x^2-2x$ en el intervalo $I =  [-3.3]$.
+\begin{solucion}
+Con ayuda del gráfico
+		\begin{center}
+			\begin{tikzpicture}
+			\begin{axis}[
+			axis lines = left,
+			xlabel = $x$,
+			ylabel = $y$,
+			]
+			\addplot [
+			domain=-3:3,  
+			color=red,
+			]
+			{x^2-4};
+			\addplot [
+			domain=-3:3, 
+			color=blue,
+			]
+			{-x^2-2*x};
+			
+			\end{axis}
+			\end{tikzpicture}
+		\end{center}
+		Podemos ver que el área acotada por las curvas la podemos separar en 3, quedandonos
+		$$A = \displaystyle\int_{-3}^{-2}[x^2-4-(-x^2-2x)]dx 
+		+ \displaystyle\int_{-2}^{1}[-x^2-2x-(x^2-4)]dx 
+		+ \displaystyle\int_{1}^{3}[x^2-4-(-x^2-2x)]dx$$
+		$$A = \displaystyle\int_{-3}^{-2}(2x^2+2x-4)dx 
+		+ \displaystyle\int_{-2}^{1}(4-2x-2x^2)dx 
+		+ \displaystyle\int_{1}^{3}(2x^2+2x-4)dx$$
+		$$A = \dfrac{11}{3} + 9 + \dfrac{52}{3} = \dfrac{90}{3} = 30$$
+\end{solucion}
+\item Encuentre el área acotada por las curvas por las curvas $y=x(x^2+11)$ e $y=6(x^2+1)$.
+\begin{solucion}
+Buscamos los puntos de intersección de ambas curvas, igualandolas
+		$$x(x^2+11) = 6(x^2+1)$$
+		$$x(x^2+11) - 6(x^2+1) = 0$$
+		$$x^3-6x^2+11x-6 = 0$$
+		$$(x-1)(x-2)(x-3)=0$$
+		Tenemos entonces que las curvas se intersectan en $x=1, x=2$ y $x=3$.\\
+		Necesitamos ver ahora cual curva va arriba y cual abajo. Notemos que
+		$$x^3-6x^2+11x-6 \geq 0\quad si \qquad 1 \leq x \leq 2$$
+		$$x^3-6x^2+11x-6 \leq 0\quad si \qquad 2 \leq x \leq 3$$
+		Con lo que concluimos que en $[1,2]$ la curva $y=x(x^2+11)$ va sobre la curva $y=6(x^2+1)$ y que en $[2,3]$ pasa lo contrario.\\
+		Finalmente,
+		$$A = \displaystyle\int_{1}^{2}[x(x^2+11) - 6(x^2+1)]dx 
+		+ \displaystyle\int_{2}^{3}[6(x^2+1) - x(x^2+11)]dx$$ 
+		$$A = \displaystyle\int_{1}^{2}(x^3-6x^2+11x-6)dx 
+		+ \displaystyle\int_{2}^{3}(6-11x+6x^2-x^3)dx$$ 
+		$$A = \dfrac{1}{4} + \dfrac{1}{4} = \dfrac{1}{2}$$
+\end{solucion}
+\item Hallar el área de la elipse
+	$$\dfrac{x^2}{9} + \dfrac{y^2}{4} = 1$$
+\begin{solucion}
+En primer lugar, despejemos $y$, es decir
+		$$y = \pm\dfrac{2\ \sqrt[]{9 - x^2}}{3}$$
+		Para encontrar el área, podemos buscar el área de un cuarto de la elipse y multiplicarla por 4, es decir
+		$$A = 4\displaystyle\int_0^3 \dfrac{2\ \sqrt[]{9 - x^2}}{3}dx$$
+		Utilizamos el cambio de variable $x =3sen(\theta) \ra dx = 3cos(\theta)d\theta$
+		$$A = 4\displaystyle\int_0^{\pi/2} \dfrac{2\ \sqrt[]{9 - 9sen^2(\theta)}}{3} 3cos(\theta)d\theta$$
+		$$A = 4\displaystyle\int_0^{\pi/2} \dfrac{2 \cdot 3cos(\theta)}{3} 3cos(\theta)d\theta$$
+		$$A = 24\displaystyle\int_0^{\pi/2} cos^2(\theta)d\theta$$
+		$$A = 24\displaystyle\int_0^{\pi/2} \dfrac{1+cos(2\theta)}{2}d\theta$$
+		$$A = 24 \cdot \dfrac{\pi}{4}$$
+		$$A = 6 \pi$$
+\end{solucion}
 \end{preguntas}
 \end{document}
