--- a/2019/1/MAT1610/12/enunciado.tex
+++ b/2019/1/MAT1610/12/enunciado.tex
@@ -113,6 +113,12 @@
 \end{center}
 
 \begin{preguntas}
+\item Calcular
+\begin{tasks}(3)
+\task $\displaystyle\int_0^{\frac{1}{\sqrt[]{2}}} \dfrac{x \arcsin(x^2)}{\sqrt[]{1-x^4}}dx$
+\task $\displaystyle\int_0^{\ln(2)} e^x\ \sqrt[]{e^x-1}dx$
+\task $\displaystyle\int_{-3}^{4} |x-1|dx$
+\end{tasks}
 \item Determine el área limitada por la parabola $y^2=4x$ y la recta $y=x$.
 \item Usando integrales, calcule el área del siguiente triangulo
 	\begin{center}
