Enunciado de 2019/1/MAT1610/12

--- a/2019/1/MAT1610/12/enunciado.tex
+++ b/2019/1/MAT1610/12/enunciado.tex
@@ -119,6 +119,9 @@
 \task $\displaystyle\int_0^{\ln(2)} e^x\ \sqrt[]{e^x-1}dx$
 \task $\displaystyle\int_{-3}^{4} |x-1|dx$
 \end{tasks}
+\item Demuestre que la función
+$$F(x) = \displaystyle\int_{1-x}^{1+x} \ln(t^2)dt, \quad x \in [0, \frac{1}{2}]$$
+es decreciente
 \item Determine el área limitada por la parabola $y^2=4x$ y la recta $y=x$.
 \item Usando integrales, calcule el área del siguiente triangulo
 	\begin{center}
