Solución de 2019/1/MAT1610/12

--- a/2019/1/MAT1610/12/solucion.tex
+++ b/2019/1/MAT1610/12/solucion.tex
@@ -127,6 +127,12 @@
 \item 
 \end{enumerate}
 \end{solucion}
+\item Demuestre que la función
+$$F(x) = \displaystyle\int_{1-x}^{1+x} \ln(t^2)dt, \quad x \in [0, \frac{1}{2}]$$
+es decreciente
+\begin{solucion}
+
+\end{solucion}
 \item Determine el área limitada por la parabola $y^2=4x$ y la recta $y=x$.
 \begin{solucion}
 \begin{center}
