--- a/2019/1/MAT1610/12/enunciado.tex
+++ b/2019/1/MAT1610/12/enunciado.tex
@@ -113,6 +113,7 @@
 \end{center}
 
 \begin{preguntas}
+\item Calcule $\lim\limits_{n \ra \infty} \sqrt[]{\dfrac{1}{n^3}} + \sqrt[]{\dfrac{2}{n^3}} + \dots  + \sqrt[]{\dfrac{1}{n^2}}$
 \item Calcular
 \begin{tasks}(3)
 \task $\displaystyle\int_0^{\frac{1}{\sqrt[]{2}}} \dfrac{x \arcsin(x^2)}{\sqrt[]{1-x^4}}dx$
