Enunciado de 2019/1/MAT1610/12.5

--- a/2019/1/MAT1610/12.5/enunciado.tex
+++ b/2019/1/MAT1610/12.5/enunciado.tex
@@ -148,16 +148,15 @@ $$F(x) = \displaystyle\int_0^{x^2} \dfrac{xtan(t)}{1+t^2}dt$$
 	Calule $F'(\pi /4)$
 \item Calcular $F'(0)$, siendo
 	$$F(x) = \displaystyle\int_0^{5x+1} \dfrac{e^{t^2}}{1+t^4}dt$$
-\item Calcule los siguientes límites, en caso de que existan
+\item Demuestre que la función
+$$F(x) = \displaystyle\int_{1-x}^{1+x} \ln(t^2)dt, \quad x \in [0, \frac{1}{2}]$$
+es decreciente
+\item Resolver las siguientes integrales indefinidas
 \begin{tasks}(2)
-\task $\lim\limits_{x \ra 5} \dfrac{1}{x-5}$ 
-\task $\lim\limits_{x \ra 2} \dfrac{4x}{6-x}$
-\task $\lim\limits_{x \ra -1} \dfrac{x^3+1}{x^2-1}$
-\task $\lim\limits_{x \ra 3} \dfrac{\sqrt[]{4-x}-1}{x-3}$
-\task $\lim\limits_{x \ra 2} \dfrac{\sqrt[]{6-x}-2}{\sqrt[]{3-x}-1}$
-\task $\lim\limits_{x \ra 1} \dfrac{x^4+2x^3-3x^2+4x-4}{x^4+2x-3}$
-\task $\lim\limits_{x \ra 0} \dfrac{|x|(|x|-x)}{x^2}$
-\task $\lim\limits_{x \ra 2}\left(\dfrac{1}{x}-\dfrac{1}{|x|}\right)$
+\task $\displaystyle\int \dfrac{e^{ln(x)}}{x^2+7}dx$
+\task $\displaystyle\int (x+2)sen(x^2+4x-6)dx$
+\task $\displaystyle\int \dfrac{3x}{\sqrt[3]{x^2+3}}dx$
+\task $\displaystyle\int \dfrac{e^x-1}{e^x+1}dx$
 \end{tasks}
 \item Resolver las siguientes integrales definidas
 \begin{tasks}(2)
